[GH-PAGES] Updated template

--- a/css/main.sass
+++ b/css/main.sass
@@ -45,7 +45,7 @@ body
   top: 10px
   width: $rs*3
   height: $rs*3
-  background-color: #000
+  // background-color: #000
   overflow: hidden
   z-index: 99
   .logo
@@ -596,11 +596,10 @@ body
       border-radius: 999em
       line-height: 44px
       padding: 0 18px
-      color: #972988
-      background: #efbd1c
+      color: #fff
 
-      background-color: #f3c80a
-      border-color: #dbb409
+      background-color: #972988
+      border-color: #550c4b
       border-radius: 2px
       border-bottom-width: 3px
       border-bottom-style: solid
