[GH-PAGES] Added blog 10 things I love in Singapore

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,6 +49,8 @@
           </div>
           <a name="topofpage"></a>
           {{content}}
+          <div id="disqus_thread"></div>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
         </section>
         <footer class="post-footer">
           <section class="share">
@@ -60,7 +62,7 @@
                 </a>
               {% endif %}
             {% endfor %}
-            <a href="https://mysquar.com/en/about">About Us</a>
+            <!-- <a href="https://mysquar.com/en/about">About Us</a> -->
           </section>
         </footer>
         <div class="bottom-teaser cf">
