--- a/css/main.sass
+++ b/css/main.sass
@@ -399,7 +399,7 @@ body
       margin: 0 auto
     figure
       margin: 0
-      padding: 0 0 30px
+      padding: 0 0 15px
     figcaption
       font-weight: 400
       font-style: italic
@@ -598,8 +598,8 @@ body
       padding: 0 18px
       color: #fff
 
-      background-color: #972988
-      border-color: #550c4b
+      background-color: #ce0000
+      border-color: #b80000
       border-radius: 2px
       border-bottom-width: 3px
       border-bottom-style: solid
@@ -628,7 +628,7 @@ pre
     padding-left: 0
 
 a, .post .post-content a
-  color: #972988
+  color: #ce0000
 
 pre, code 
   background-color: rgba(0,0,0,0.04)
@@ -639,3 +639,5 @@ pre > code
 .frame.recent .post.featured
   display: none
 
+.post-content
+  text-align: justify
