--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{{ site.description }}" />
 
+  <meta property="og:image" content="{{site.url}}{{page.image}}">
+
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
   <meta name="apple-mobile-web-app-capable" content="yes">
