[GH-PAGES] Updated css for content

--- a/css/main.sass
+++ b/css/main.sass
@@ -141,6 +141,8 @@ body
   @include box-sizing(border-box)
   @include respond-to(800)
     padding: 0 $rs*2
+  @include respond-to(480)
+    padding: 0 $rs
   article
     padding: $rs*1.5 0
     border-bottom: 1px solid #f2f2f0
